--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
         <h1 class="text-3xl">Login</h1>
         <img src="/assets/regpic.png" alt="pic">
         <input type="text" placeholder="Name"
-            class="border-2 border-gray-300 rounded-md py-2 pl-10 w-80 max-[426px]:w-60 max-[375px]:w-40">
+            class="border-2 border-gray-300 rounded-md py-2 pl-10 w-80 max-[426px]:w-60 max-[375px]:w-40" id="name"
+            onkeyup="handleKeyUp(this.value)">
         <p class="text-red-500" id="warning"></p>
         <button class="text-white bg-green-500 py-2 px-10 rounded-lg">Start</button>
     </div>
 
+    <script type="module" src="/index.js"></script>
 </body>
 
 </html>
