--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
     <link rel="icon" href="/assets/icon.png" type="image/x-icon">
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="/styles.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
             class="border-2 border-gray-300 rounded-md py-2 pl-10 w-80 max-[426px]:w-60 max-[375px]:w-40" id="name"
             onkeyup="handleKeyUp(this.value)">
         <p class="text-red-500" id="warning"></p>
-        <button class="text-white bg-green-500 py-2 px-10 rounded-lg">Start</button>
+        <button class="text-white bg-green-500 py-2 px-10 rounded-lg" onclick="start()">Start</button>
     </div>
 
     <script type="module" src="/index.js"></script>
