--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
     <link rel="icon" href="/assets/icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
 <body>
-    <nav class="bg-green-500 pl-10">
+    <nav class="bg-green-400/70 pl-20">
         <img src="/assets/logo.png" alt="logo">
 
     </nav>
     <div class="flex flex-col items-center justify-center bg-green-100/70 w-fit mx-auto mt-20 p-10 rounded-lg gap-y-10">
         <h1 class="text-3xl">Login</h1>
         <img src="/assets/regpic.png" alt="pic">
-        <input type="text" placeholder="Name"
+        <input type="text" placeholder="Name  Ex:John Carter"
             class="border-2 border-gray-300 rounded-md py-2 pl-10 w-80 max-[426px]:w-60 max-[375px]:w-40" id="name"
             onkeyup="handleKeyUp(this.value)">
         <p class="text-red-500" id="warning"></p>
