--- a/main.html
+++ b/main.html
@@ -4,11 +4,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quiz</title>
+    <link rel="icon" href="/assets/icon.png" type="image/x-icon">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body>
-    <h1 id="kari"></h1>
+<body class="bg-[url(/assets/bg.png)]">
+    <nav class="bg-green-400/70 px-20 flex justify-between items-center">
+        <img src="/assets/logo.png" alt="logo">
+        <h1 id="name" class="text-white font-medium text-lg font-sans"></h1>
+    </nav>
+    <div class="w-full text-right pr-20 py-10">
+        <h1 class="text-lg font-bold" id="timer">00:57</h1>
+    </div>
+    <div class="w-fit mx-auto">
+        <div class="flex flex-col  w-fit bg-white py-5 px-10 rounded-lg shadow-xl mt-20">
+            <h1 class="font-semibold text-2xl mb-10">1.What does HTML stand For ?</h1>
+            <label for="a1" class="inline-flex items-center text-lg has-checked:bg-green-100 p-2 rounded-lg">
+                <input type="radio" name="answers" id="a1" class="w-4 h-4 mr-5 accent-pink-500"> Hyper Text
+                Markup Language
+            </label>
+            <label for="a2" class="inline-flex items-center text-lg has-checked:bg-green-100 p-2 rounded-lg">
+                <input type="radio" name="answers" id="a2" class="w-4 h-4 mr-5 accent-pink-500"> Hyper Text Preprocessor
+            </label>
+            <label for="a3" class="inline-flex items-center text-lg has-checked:bg-green-100 p-2 rounded-lg">
+                <input type="radio" name="answers" id="a3" class="w-4 h-4 mr-5 accent-pink-500"> Hyper Text Multiple
+                Language
+            </label>
+            <label for="a4" class="inline-flex items-center text-lg has-checked:bg-green-100 p-2 rounded-lg">
+                <input type="radio" name="answers" id="a4" class="w-4 h-4 mr-5 accent-pink-500"> Hyper Tool Multi
+                Language
+            </label>
+        </div>
+        <div class="text-right mt-10">
+            <button class="text-white bg-green-500 py-2 px-10 rounded-lg">
+                Next
+            </button>
+        </div>
+    </div>
+
+
     <script type="module" src="./main.js"></script>
 </body>
 
