add quiz and desplay and next function close #12

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <h1 class="text-3xl">Login</h1>
         <img src="/assets/regpic.png" alt="pic">
         <input type="text" placeholder="Name  Ex:John Carter"
-            class="border-2 border-gray-300 rounded-md py-2 pl-10 w-80 max-[426px]:w-60 max-[375px]:w-40" id="name"
-            onkeyup="handleKeyUp(this.value)">
+            class="border-2 border-gray-300 rounded-md py-2 pl-10 w-80 max-[426px]:w-60 max-[375px]:w-40 bg-white"
+            id="name" onkeyup="handleKeyUp(this.value)">
         <p class="text-red-500" id="warning"></p>
         <button class="text-white bg-green-500 py-2 px-10 rounded-lg" onclick="start()">Start</button>
     </div>
