--- a/main.html
+++ b/main.html
@@ -18,51 +18,11 @@
         <h1 class="text-lg font-bold" id="timer">00:57</h1>
     </div>
     <div class="w-fit mx-auto">
-        <div class="flex flex-col  w-fit bg-white py-5 px-10 rounded-lg shadow-xl mt-20">
-            <h1 class="font-semibold text-2xl mb-10">1.What does HTML stand For ?</h1>
-            <div class=" has-checked:bg-green-100 inline-flex items-center w-full p-2 rounded-lg">
-                <label for="a1"
-                    class="w-5 h-5 rounded-full border-2 border-green-500 cursor-pointer relative flex items-center justify-center peer-checked:border-green-500">
-                    <input type="radio" id="a1" name="answers" class="peer hidden">
-                    <span
-                        class="w-2.5 h-2.5 bg-green-500 rounded-full scale-0 peer-checked:scale-120 transition-transform duration-300">
-                    </span>
-                </label>
-                <label for="a1" class="ml-5 text-lg cursor-pointer">Hyper Text Markup Language</label>
-            </div>
-            <div class=" has-checked:bg-green-100 inline-flex items-center w-full p-2 rounded-lg">
-                <label for="a2"
-                    class="w-5 h-5 rounded-full border-2 border-green-500 cursor-pointer relative flex items-center justify-center peer-checked:border-green-500">
-                    <input type="radio" id="a2" name="answers" class="peer hidden">
-                    <span
-                        class="w-2.5 h-2.5 bg-green-500 rounded-full scale-0 peer-checked:scale-120 transition-transform duration-300">
-                    </span>
-                </label>
-                <label for="a2" class="ml-5 text-lg cursor-pointer">Hyper Text Preprocessor</label>
-            </div>
-            <div class=" has-checked:bg-green-100 inline-flex items-center w-full p-2 rounded-lg">
-                <label for="a3"
-                    class="w-5 h-5 rounded-full border-2 border-green-500 cursor-pointer relative flex items-center justify-center peer-checked:border-green-500">
-                    <input type="radio" id="a3" name="answers" class="peer hidden">
-                    <span
-                        class="w-2.5 h-2.5 bg-green-500 rounded-full scale-0 peer-checked:scale-120 transition-transform duration-300">
-                    </span>
-                </label>
-                <label for="a3" class="ml-5 text-lg cursor-pointer">Hyper Text Multiple Language</label>
-            </div>
-            <div class=" has-checked:bg-green-100 inline-flex items-center w-full p-2 rounded-lg">
-                <label for="a4"
-                    class="w-5 h-5 rounded-full border-2 border-green-500 cursor-pointer relative flex items-center justify-center peer-checked:border-green-500">
-                    <input type="radio" id="a4" name="answers" class="peer hidden">
-                    <span
-                        class="w-2.5 h-2.5 bg-green-500 rounded-full scale-0 peer-checked:scale-120 transition-transform duration-300">
-                    </span>
-                </label>
-                <label for="a4" class="ml-5 text-lg cursor-pointer">Hyper Tool Multi Language</label>
-            </div>
+        <div class="flex flex-col  w-fit bg-white py-5 px-10 rounded-lg shadow-xl mt-20" id="outdisplay">
+
         </div>
         <div class="text-right mt-10">
-            <button class="text-white bg-green-500 py-2 px-10 rounded-lg">
+            <button id="next" onclick="nextQues()" class="text-white bg-green-500 py-2 px-10 rounded-lg">
                 Next
             </button>
         </div>
