--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             class="border-2 border-gray-300 rounded-md py-2 pl-10 w-80 max-[426px]:w-60 max-[375px]:w-40 bg-white"
             id="name" onkeyup="handleKeyUp(this.value)">
         <p class="text-red-500" id="warning"></p>
-        <button class="text-white bg-green-500 py-2 px-10 rounded-lg" onclick="start()">Start</button>
+        <button class="text-white bg-green-500 py-2 px-10 rounded-lg cursor-pointer" onclick="start()">Start</button>
     </div>
 
     <script type="module" src="/index.js"></script>
