--- a/main.html
+++ b/main.html
@@ -15,14 +15,14 @@
         <h1 id="name" class="text-white font-medium text-lg font-sans"></h1>
     </nav>
     <div class="w-full text-right pr-20 py-10">
-        <h1 class="text-lg font-bold" id="timer">00:57</h1>
+        <h1 class="text-lg font-bold" id="time"></h1>
     </div>
     <div class="w-fit mx-auto">
         <div class="flex flex-col  w-fit bg-white py-5 px-10 rounded-lg shadow-xl mt-20" id="outdisplay">
 
         </div>
         <div class="text-right mt-10">
-            <button id="next" onclick="nextQues()" class="text-white bg-green-500 py-2 px-10 rounded-lg">
+            <button id="next" onclick="nextQues()" class="text-white bg-green-500 py-2 px-10 rounded-lg cursor-pointer">
                 Next
             </button>
         </div>
