--- a/main.html
+++ b/main.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
-    <link rel="icon" href="/assets/icon.png" type="image/x-icon">
+    <link rel="icon" href="./assets/icon.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body class="bg-[url(/assets/bg.png)]">
+<body class="bg-[url(./assets/bg.png)]">
     <nav class="bg-green-400/70 px-20 flex justify-between items-center">
-        <img src="/assets/logo.png" alt="logo">
+        <img src="./assets/logo.png" alt="logo">
         <h1 id="name" class="text-white font-medium text-lg font-sans"></h1>
     </nav>
     <div class="w-full text-right pr-20 py-10">
