--- a/main.html
+++ b/main.html
@@ -10,16 +10,16 @@
 </head>
 
 <body class="bg-[url(./assets/bg.png)]">
-    <nav class="bg-green-400/70 px-20 flex justify-between items-center">
+    <nav class="bg-green-400/70 px-20 max-[426px]:px-5 flex justify-between items-center">
         <img src="./assets/logo.png" alt="logo">
-        <h1 id="name" class="text-white font-medium text-lg font-sans"></h1>
+        <h1 id="name" class="text-white font-medium text-lg font-sans text-right"></h1>
     </nav>
-    <div class="w-full text-right pr-20 py-10">
-        <h1 class="text-lg font-bold" id="time"></h1>
+    <div class="w-full text-right pr-20 py-10 ">
+        <h1 class="text-3xl font-bold" id="time"></h1>
     </div>
     <div class="w-fit mx-auto">
-        <div class="flex flex-col  w-fit bg-white py-5 px-10 rounded-lg shadow-xl mt-20" id="outdisplay">
-
+        <div class="flex flex-col  w-fit bg-white py-5 px-10 rounded-lg shadow-xl mt-20 mb-10 max-[426px]:mt-5"
+            id="outdisplay">
         </div>
         <div class="text-right mt-10">
             <button id="next" onclick="nextQues()" class="text-white bg-green-500 py-2 px-10 rounded-lg cursor-pointer">
